--- a/template2.html
+++ b/template2.html
@@ -111,6 +111,93 @@
                 </div>
             </div>
         </div>
+        <div class="cards d-none">
+            <div class="diagonal">
+                <div class="background-animation">
+                    <ul class="circles">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="content">
+                    <img src="./assets/balon-fut.png" alt="" height="160" class="content-image">
+                    <img src="./assets/pasto.png" alt="" class="m-auto">
+                    <div class="content-info">
+                        <h2 class="content-info-title">Gramas <span>Rugby</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam sint accusantium quisquam hic quidem perspiciatis quaerat adipisci, molestias dolores dolorum quis dolor ut repellat commodi repudiandae assumenda expedita officia.</p>
+                        <div class="d-flex">
+                            <a href="#">Conoce más</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards d-none">
+            <div class="diagonal">
+                <div class="background-animation">
+                    <ul class="circles">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="content">
+                    <img src="./assets/balon-fut.png" alt="" height="160" class="content-image">
+                    <img src="./assets/pasto.png" alt="" class="m-auto">
+                    <div class="content-info">
+                        <h2 class="content-info-title">Gramas <span>Baloncesto</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam sint accusantium quisquam hic quidem perspiciatis quaerat adipisci, molestias dolores dolorum quis dolor ut repellat commodi repudiandae assumenda expedita officia.</p>
+                        <div class="d-flex">
+                            <a href="#">Conoce más</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards d-none">
+            <div class="diagonal">
+                <div class="background-animation">
+                    <ul class="circles">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="content">
+                    <img src="./assets/balon-fut.png" alt="" height="160" class="content-image">
+                    <img src="./assets/pasto.png" alt="" class="m-auto">
+                    <div class="content-info">
+                        <h2 class="content-info-title">Gramas <span>Vóleibol</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam sint accusantium quisquam hic quidem perspiciatis quaerat adipisci, molestias dolores dolorum quis dolor ut repellat commodi repudiandae assumenda expedita officia.</p>
+                        <div class="d-flex">
+                            <a href="#">Conoce más</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="icons-bar">
             <div class="icons-bar-content">
                 <ul>
